--- a/assets/css/styleform.css
+++ b/assets/css/styleform.css
@@ -74,6 +74,183 @@ span {
     color: #ffffff; 
 }
 
+/* Registro  css */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background-color: #d0d0d0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}    
+
+.form-content{
+    width: 100%;
+    max-width: 450px;
+    background-color: #2c2f35;
+    padding: 50px 60px 70px ;
+    text-align: center;
+    border-radius: 25px;
+}
+
+.form-content h1 {
+    
+    font-size: 30px;
+    margin-bottom: 60px;
+    color: #FFFFFF;
+    position: relative;
+}
+
+.form-content h1::after{
+    content: '';
+    width: 30px;
+    height: 4px;
+    border-radius: 3px;
+    background-color: #04bd7d;
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+
+.input-field{
+    background-color: #515966;
+    margin: 15px 0;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    transition: max-height 0.5s;
+    overflow: hidden;
+
+}
+
+input{
+    width: 100%;
+    background: transparent;
+    border: 0;
+    outline: none;
+    padding: 18px 15px;
+    color: #FFFFFF;
+
+}
+
+input::placeholder{
+    color: #FFFFFF;
+}
+
+.input-field i{
+    margin-left: 15px;
+    color: #04bd7d;
+}
+
+form p{
+    color: #FFFFFF;
+    text-align: left;
+    font-size: 13px;
+}
+
+form p a{
+    color: #04bd7d;
+    margin-left: 5px;
+}
+
+.btn-field{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.btn-field button{
+    flex-basis: 48%;
+    font-size: 16px;
+    background-color: #04bd7d;
+    color: #FFFFFF;
+    height: 40px;
+    border-radius: 40px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    transition: background 1s;
+}
+
+.input-group{
+    height: 250px;
+
+}
+
+.btn-field button.disable{
+    background-color: #EAEAEA;
+    color: #2c2f35;
+}
+
+
+
+/* fin registro css */
+
+
+/* Combos del dia */
+
+.services
+{
+  background-image: linear-gradient(
+    rgba(0,0,0,0.7),
+    rgba(0,0,0,0.7)),
+    url(/img);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover; /*cubre toda la imagen (area)*/
+  background-attachment: fixed; /*efecto estatico al mover*/
+  padding: 100px o;
+}
+
+.services-content
+{
+  text-align: center;  /*centra los cafes*/
+}
+
+.services-group
+{
+  display: flex; /*trabaja con el between, hace el bloque flexible*/
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.services-1
+{
+  padding: 0 100px;
+}
+
+.services-1 img
+{
+  width: 40px;
+  margin-bottom: 15px;
+}
+
+.services-1 h3
+{
+  color: rgb(45, 119, 193);
+  font-size: 18px;
+}
+
+.services-content p
+{
+  color: #c5c5c5;
+  font-size: 16px;
+  margin-bottom: 50px;
+  padding: 0 100px;
+}
+
+
+/* fin combo del dia */
+
 h3 {
     color: orange;
     font-size: 23px;
